# pfa

./: .commit-check.yaml  .env.example  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Containerfile  Makefile  README.md  cchk.toml  compose.yaml  mcp_server.py  pyproject.toml
.github/workflows/: commit-check.yml
app/api/v1/endpoints/: agents.py
app/core/: config.py  loggers.py
app/models/: cse.py
app/repository/: base.py  cse.py  prompt.py  storage.py
app/services/agents/: __init__.py
app/services/agents/planner/: __init__.py  agent.py
app/services/mcp/: prompts.py  resources.py
app/services/mcp/prompts/: server.py
app/services/mcp/resource/: server.py
