[project]
name = "personal-finance-assistant"
version = "0.0.1"
description = "My Personal Finance Assistant"
authors = [
    {name = "syahrulhamdani",email = "23093968+syahrulhamdani@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "python-telegram-bot (>=22.5,<23.0)",
    "pydantic-settings (>=2.11.0,<2.12.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "google-adk (>=1.16.0,<1.17.0)",
    "langsmith (>=0.4.34,<0.5.0)",
    "langchain-core (>=0.3.79,<0.4.0)",
    "typer (>=0.19.2,<0.20.0)",
    "fastmcp (>=2.12.4,<2.13.0)",
    "xmltodict (>=1.0.2,<1.1.0)",
    "beautifulsoup4[lxml] (>=4.14.2,<4.15.0)",
    "html2text (>=2025.4.15,<2025.5.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.9"
ruff = "^0.14.0"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
